# ReleaseTracker

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  FEATURES.md  LICENSE  Makefile  README.en.md  README.md  docs-requirements.txt  mkdocs.yml
backend/: README.md  pyproject.toml
backend/db/: schema.sql
backend/migrations/: 0001_initial_schema.sql  0002_releases_add_columns.sql  0003_release_history_add_columns.sql  0004_users_oidc_fields.sql  0005_oidc_tables.sql
backend/scripts/: docker-entrypoint.sh
backend/tests/: conftest.py  db_helpers.py  test_aggregate_storage.py  test_auth.py  test_auto_probe.py  test_changelog_extraction.py  test_changelog_raw_fetch.py  test_container_published_at_stability.py  test_credentials.py  test_dbmate_migrations.py  test_docker_config_blob.py  test_docker_tag_selection.py  test_executor_adapters.py  test_executor_portainer_snapshot.py  test_executor_scheduler.py  test_executor_scheduler_health_check.py  test_executor_schema.py  test_executor_snapshot_lock.py  test_executor_snapshot_retention.py  test_executor_snapshots_history.py  test_executors_api.py  test_github_fetch_mode.py  test_gitlab_fallback.py  test_health_check_runner.py  test_helm_status_probe.py  test_http_probe.py  test_main.py  test_models.py  test_notifier_storage.py  test_oidc_admin.py  test_recovery_hook.py  test_redesign_retirement_guards.py  test_releases.py  test_rollback_service.py  test_runtime_connections.py  test_runtime_native_probe.py  test_scheduler_host.py  test_scheduler_selection.py  test_settings.py  test_snapshot_redactor.py  (+9 more)
(+210 files in other folders)
